welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:1: error: type mismatch;
 found   : Unit
 required: Boolean
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
                                            ^